--- a/templates/Partials/movieList.html
+++ b/templates/Partials/movieList.html
@@ -1,10 +1,9 @@
-<p></p>
 <div class="container">
 
     <input ng-model="test"></input>
     {{test}}
 
-    <div class="container" ng-controller="movieTableManage">
+    <div class="container">
         <h1>Movie list</h1>
         <table class="table">
             <thead>
