--- a/Partials/main.html
+++ b/Partials/main.html
@@ -1,18 +1,16 @@
 <div class="container">
 
-    <input ng-model="test"></input>
-    {{test}}
-
     <div class="container">
-        <h1>Movie list</h1>
+        <h1>Main Movie list</h1>
         <table class="table">
             <thead>
             <tr>
                 <th>Name</th>
                 <th>Provider</th>
                 <th>Link</th>
-                <th>source_lan</th>
-                <th>dest_lans</th>
+                <th>source language</th>
+                <th>dest language</th>
+                <th>dest language</th>
             </tr>
             </thead>
             <tbody>
@@ -20,8 +18,9 @@
                 <td>{{movie.name}}</td>
                 <td>{{movie.provider}}</td>
                 <td>{{movie.link}}</td>
-                <td>{{movie.source_lan}}</td>
-                <td>{{movie.dest_lans}}</td>
+                <td>{{movie.source_lan[0].name}}</td>
+                <td>{{movie.dest_lans[0].name}}</td>
+                <td>{{movie.dest_lans[1].name}}</td>
             </tr>
             </tbody>
         </table>
