add user input functionality

--- a/partials/teacherManager.html
+++ b/partials/teacherManager.html
@@ -3,5 +3,9 @@
     </video-search>
 
     <youtube-player ng-if="videoUrl"
-                    video-url="videoUrl" />
+                    video-url="videoUrl">
+    </youtube-player>
+
+    <user-subtitles-input subtitles="subtitles">
+    </user-subtitles-input>
 </div>
